--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-PORT=3001
-MONGODB_URI=your-mongodb-uri
+MONGODB_URI=mongodb+srv://burbenburbenov_db_user:oqA73HRQAQ3BmFzi@cluster0.6txdiig.mongodb.net/?appName=Cluster0
